--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -83,10 +83,15 @@ section {
 .section-header h2:before,
 .section-header h2:after {
   content: "";
-  width: 50px;
-  height: 2px;
-  background: var(--color-primary);
-  display: inline-block;
+      position: absolute;
+      left: 50%;
+      bottom: -10px;
+      transform: translateX(-50%);
+      width: 80px;
+      height: 3px;
+      background-color: #f29b38;
+      border-radius: 5px;
+      animation: linePulse 2s infinite ease-in-out alternate;
 }
 
 .section-header h2:before {
@@ -3170,3 +3175,9 @@ section {
       font-weight: 600;
       font-size: 0.9rem;
     }
+
+
+
+
+
+  
