--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -205,7 +205,7 @@ section {
 /*--------------------------------------------------------------
 # Preloader
 --------------------------------------------------------------*/
-#preloader {
+/* #preloader {
   position: fixed;
   inset: 0;
   z-index: 999999;
@@ -251,11 +251,11 @@ section {
 /*--------------------------------------------------------------
 # Disable aos animation delay on mobile devices
 --------------------------------------------------------------*/
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
   [data-aos-delay] {
     transition-delay: 0 !important;
   }
-}
+} */
 
 /*--------------------------------------------------------------
 # Header
@@ -265,7 +265,7 @@ section {
   position: absolute;
   padding: 18px 0;
   top: 0;
-  background-color: white;
+  background-color: rgba(150, 60, 49, 0.85);
   color: #000;
   left: 0;
   right: 0;
@@ -701,35 +701,7 @@ section {
 /*--------------------------------------------------------------
 # Constructions Section
 --------------------------------------------------------------*/
-.constructions .card-item {
-  border: 1px solid rgba(82, 86, 94, 0.2);
-  background: #fff;
-  position: relative;
-  border-radius: 0;
-}
 
-.constructions .card-item .card-bg {
-  min-height: 300px;
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-}
-
-.constructions .card-item .card-body {
-  padding: 30px;
-}
-
-.constructions .card-item h4 {
-  font-weight: 700;
-  font-size: 20px;
-  margin-bottom: 15px;
-  color: var(--color-secondary);
-}
-
-.constructions .card-item p {
-  color: var(--color-secondary);
-  margin: 0;
-}
 
 /*--------------------------------------------------------------
 # Services Section
